# finetuning-proof-datasets-2b3b

./: .gitignore  .resource_finder_complete  README.md  REPORT.md  experiments.py  literature_review.md  planning.md  pyproject.toml  resources.md
.idea-explorer/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md
logs/: research_prompt.txt  resource_finder_prompt.txt  session_instructions.txt
papers/: README.md
results/: bbh_boolean_expressions_preds.json  bbh_causal_judgement_preds.json  bbh_logical_deduction_three_objects_preds.json  metrics.json  mmlu_preds_few_shot.jsonl  mmlu_preds_finetuned.jsonl  mmlu_preds_zero_shot.jsonl
results/finetuned_mmlu_t5_small/: eval_metrics.json
